# wactorz

./: .all-contributorsrc  .env.template  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.dev.yaml  compose.staging.yml  compose.yaml  index.html  package.json  pyproject.toml  requirements.txt  versions.json
.github/workflows/: ci.yml  desktop-release.yml  docs.yml  image.yml  release.yml  require-up-to-date.yml
api/js/: hierarchy.html  index.html
api/python/: search.js  wactorz.html
docs/: _landing.html  agents.md  api.md  architecture.md  deployment.md  desktop.md  development.md  dockerhub.md  index.md  interfaces.md  mqtt_auto_wiring.md  mqtt_topics.md  pipelines.md  prometheus.md  python-api.md  quickstart.md  reference.md  remote-nodes.md  versions.json  windows.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: sw.js
frontend/src/: main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
governance/: CLA.md
guide/: agents.html  architecture.html  deployment.html  development.html  dockerhub.html  interfaces.html  mqtt_auto_wiring.html  pipelines.html  prometheus.html  remote-nodes.html
ha-addon/: CHANGELOG.md  CONTRIBUTING.md  DOCS.md  Dockerfile  LOCAL_TESTING.md  README.md  config.yaml  run.sh
infra/otelcol/: config.yaml
infra/prometheus/: render-config.sh
mobile/: CONTRIBUTING.md  README.md  pubspec.yaml
mobile/lib/: client.dart  main.dart  models.dart  theme.dart
mobile/test/: client_test.dart  models_test.dart  widget_test.dart
node/: package.json
scripts/: build_docs.py  deploy.sh  package-full-release.sh  package-native.sh  package-release.sh  package-source.sh  start.bat  start.ps1  sync_versions.py  watch-costs.ps1
site/guide/: deployment.html  development.html
staging/: .env.staging.template  Caddyfile.snippet  latest.py  mosquitto.conf
static/app/: index.html  site.webmanifest  sw.js
static/docs/: index.html
systemd/: wactorz.service
tests/: test_cost_and_history.py  test_ha_helper.py  test_home_assistant_agent.py  test_llm_provider_tools.py  test_mcp_server.py  test_ollama_provider.py  test_persistence_writes.py  test_reset.py  test_supervision.py
wactorz/: __init__.py  _version.py  cli.py  config.py  fuseki.py  main.py  monitor_server.py  remote_runner.py  reset.py
(+966 files in other folders)
