[package]
name = "wactorz-desktop"
version.workspace = true
description = "Wactorz desktop app (Tauri v2 + embedded Rust backend)"
authors = ["Lazaros Toumanidis"]
license.workspace = true
repository.workspace = true
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Tauri (pinned — not in the shared workspace)
tauri            = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
log              = "0.4"

# Shared serialisation (version-pinned to match Tauri's expectations)
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Embedded backend — pulled from the workspace
wactorz-core       = { workspace = true }
wactorz-mqtt       = { workspace = true }
wactorz-agents     = { workspace = true }
wactorz-interfaces = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy            = { workspace = true }
